// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-dws-certifications-card.vue pc layout should be rendered correctly 1`] = `
<div
  class="root"
  data-z-data-table=""
  data-z-dws-certifications-card=""
>
  <z-subheader-stub>
    障害福祉サービス受給者証
  </z-subheader-stub>
  <v-card-stub
    class="py-4"
    loaderheight="4"
    tag="div"
  >
    <div
      class="v-data-table v-data-table--has-bottom theme--light table clickable"
      data-desktop-table=""
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="市町村名"
                class="text-start cityName"
                role="columnheader"
                scope="col"
              >
                <span>
                  市町村名
                </span>
              </th>
              <th
                aria-label="障害支援区分"
                class="text-start dwsLevel"
                role="columnheader"
                scope="col"
              >
                <span>
                  障害支援区分
                </span>
              </th>
              <th
                aria-label="受給者証番号"
                class="text-start dwsNumber"
                role="columnheader"
                scope="col"
              >
                <span>
                  受給者証番号
                </span>
              </th>
              <th
                aria-label="適用日"
                class="text-start effectivatedOn"
                role="columnheader"
                scope="col"
              >
                <span>
                  適用日
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                伊具郡丸森町
              </td>
              <td
                class="text-start"
              >
    申請中：区分3
              </td>
              <td
                class="text-start"
              >
                3582530952
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1988-08-23"
                >
                  昭63.08.23
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                松浦市
              </td>
              <td
                class="text-start"
              >
    認定済：区分3
              </td>
              <td
                class="text-start"
              >
                4352300586
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1977-08-13"
                >
                  昭52.08.13
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                佐用郡佐用町
              </td>
              <td
                class="text-start"
              >
    申請中：区分1
              </td>
              <td
                class="text-start"
              >
                2621639292
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="2004-01-20"
                >
                  平16.01.20
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                高知市
              </td>
              <td
                class="text-start"
              >
    認定済：区分1
              </td>
              <td
                class="text-start"
              >
                1419730584
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1988-04-09"
                >
                  昭63.04.09
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                下閉伊郡田野畑村
              </td>
              <td
                class="text-start"
              >
    認定済：区分6
              </td>
              <td
                class="text-start"
              >
                5712851118
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1996-05-18"
                >
                  平08.05.18
                </time>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <v-divider-stub />
      <div
        class="text-right pa-2"
      >
        <a
          class="v-btn-stub"
          color="primary"
          nuxt=""
          text=""
          to="/users/1/dws-certifications/new"
        >
          <span>
            受給者証を登録
          </span>
          <v-icon-stub
            right=""
          >
            M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          </v-icon-stub>
        </a>
      </div>
    </div>
    <!---->
  </v-card-stub>
</div>
`;

exports[`z-dws-certifications-card.vue smart phone layout should be rendered correctly 1`] = `
<div
  class="root"
  data-z-data-table=""
  data-z-dws-certifications-card=""
>
  <z-subheader-stub>
    障害福祉サービス受給者証
  </z-subheader-stub>
  <!---->
  <!---->
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption cityName header"
        >
            市町村名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          伊具郡丸森町
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsLevel header"
        >
            障害支援区分
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    申請中：区分3
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsNumber header"
        >
            受給者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          3582530952
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1988-08-23"
          >
            昭63.08.23
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/dws-certifications/10"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption cityName header"
        >
            市町村名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          松浦市
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsLevel header"
        >
            障害支援区分
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：区分3
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsNumber header"
        >
            受給者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          4352300586
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1977-08-13"
          >
            昭52.08.13
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/dws-certifications/11"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption cityName header"
        >
            市町村名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          佐用郡佐用町
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsLevel header"
        >
            障害支援区分
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    申請中：区分1
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsNumber header"
        >
            受給者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          2621639292
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="2004-01-20"
          >
            平16.01.20
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/dws-certifications/12"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption cityName header"
        >
            市町村名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          高知市
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsLevel header"
        >
            障害支援区分
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：区分1
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsNumber header"
        >
            受給者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          1419730584
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1988-04-09"
          >
            昭63.04.09
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/dws-certifications/13"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption cityName header"
        >
            市町村名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          下閉伊郡田野畑村
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsLevel header"
        >
            障害支援区分
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：区分6
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption dwsNumber header"
        >
            受給者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          5712851118
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1996-05-18"
          >
            平08.05.18
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/dws-certifications/14"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <div
    class="z-data-table__footer footerMobile"
  >
    <a
      block=""
      class="v-btn-stub"
      color="primary"
      dark=""
      nuxt=""
      to="/users/1/dws-certifications/new"
    >
      <span>
        受給者証を登録
      </span>
    </a>
  </div>
  <!---->
</div>
`;
